RESOLVED FIXED165102
Fix exception scope verification failures in more miscellaneous files.
https://bugs.webkit.org/show_bug.cgi?id=165102
Summary Fix exception scope verification failures in more miscellaneous files.
Mark Lam
Reported 2016-11-28 12:19:48 PST
Patch coming.
Attachments
proposed patch. (9.23 KB, patch)
2016-11-28 12:27 PST, Mark Lam
saam: review+
Mark Lam
Comment 1 2016-11-28 12:27:56 PST
Created attachment 295514 [details] proposed patch.
Mark Lam
Comment 2 2016-11-28 14:57:04 PST
Thanks for the review. Landed in r209025: <http://trac.webkit.org/r209025>.
Note You need to log in before you can comment on or make changes to this bug.