Source/WebCore/bridge/runtime_array.cpp
@@ -127,7 +127,8 @@ bool RuntimeArray::put(JSCell* cell, ExecState* exec, PropertyName propertyName,
     
     if (std::optional<uint32_t> index = parseIndex(propertyName))
         return thisObject->getConcreteArray()->setValueAt(exec, index.value(), value);
-    
+
+    scope.release();
     return JSObject::put(thisObject, exec, propertyName, value, slot);
 }
 
